--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -125,6 +125,70 @@ body {
         // hair
         //_______________________________________________________________________________________
 
+
+        $iromidColor: red;
+        $iromidWidth: 20;
+        $iromidHeight: $headDepth + 60;
+
+        .iro-mid {
+            position: absolute;
+            transform-style: preserve-3d;
+            width:px2rem($iromidWidth);
+            height:px2rem($iromidHeight);
+            transform:translate(-50%, -50%) translateY(px2rem(-$headHeight/2-$iromidWidth/2)) rotateX(90deg);
+            left:50%;
+            top:50%;
+        }
+
+        .iro-mid__side {
+            position: absolute;
+            transform-style: preserve-3d;
+            background:$iromidColor;
+        } 
+        
+        .iro-mid__side-top {
+            width:100%;
+            height:100%;
+            transform:translateZ(px2rem($iromidWidth/2));        
+        }
+
+        .iro-mid__side-back {
+            width:px2rem($iromidWidth);
+            height:px2rem($iromidWidth);
+            top:px2rem(-$iromidWidth/2);
+            transform:rotateX(-90deg);
+        }
+
+        .iro-mid__side-front {
+            width:px2rem($iromidWidth);
+            height:px2rem($iromidWidth);
+            bottom:px2rem(-$iromidWidth/2);
+            transform:rotateX(90deg);
+        }
+
+        .iro-mid__side-bottom {
+            width:100%;
+            height:px2rem($iromidHeight);
+            top:px2rem(-$iromidHeight/2);
+            transform:rotateX(-90deg);        
+        }
+        
+        .iro-mid__side-left {
+            width:px2rem($iromidWidth);
+            height:px2rem($iromidHeight);
+            left:px2rem(-$iromidWidth/2);
+            transform:rotateY(-90deg);
+        }
+
+        .iro-mid__side-right {
+            width:px2rem($iromidWidth);
+            height:px2rem($iromidHeight);
+            right:px2rem(-$iromidWidth/2);
+            transform:rotateY(90deg);
+        }
+
+
+        // 0000000000000000000000000000000000000000000000000000000000000000000000000
         .hairlayer-0 {
             position: absolute;
             transform-style: preserve-3d;
