--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -2,15 +2,28 @@ $headWidth: 150;
 $headHeight: 200;
 $headDepth: 150;
 
-$headColor:grey;
-$headSideColor:#000000;
+$headColor:linear-gradient(white, #ffdd00, #ffdd00);
+$headSideColor:$headColor;
+
 $mouthSize:15;
-$mouthColor:grey;
-$mouthFrontColor:#fff;
+$mouthColor:#dd1100;
+$mouthFrontColor:#ff3300;
+
 $eyebrowSize: 8;
-$eyebrowColor:grey;
-$eyebrowFrontColor:#fff;
-$eyeInnerColor:#fff;
+$eyebrowColor:#22dd22;
+$eyebrowFrontColor:#009900;
+
+$eyeInnerColor:lightblue;
+$eyecolor: lightgrey;
+
+$iromidColor: orange;
+$iromidWidth: 20;
+$iromidHeight: $headDepth + 20;
+
+$jawsWidth:$headWidth + 20;
+$jawsHeight:$headHeight / 2.2;
+$jawsColor:#ffdd00;
+
 
 $hf: .8;
 $rf: -3;
@@ -41,7 +54,6 @@ $hairlayer4Height: $hairlayer0Height * $hf * $hf * $hf * $hf;
 $hairLayer4Deg: $hairLayer3Deg + $rf;
 
 body {
-    background:grey;
     margin: 0;
     padding: 0;
 }
@@ -122,71 +134,140 @@ body {
         }
 
         //_______________________________________________________________________________________
-        // hair
+        // iro
         //_______________________________________________________________________________________
 
-
-        $iromidColor: red;
-        $iromidWidth: 20;
-        $iromidHeight: $headDepth + 60;
-
-        .iro-mid {
+        .iro-mid, .iro-left, .iro-right {
             position: absolute;
             transform-style: preserve-3d;
             width:px2rem($iromidWidth);
             height:px2rem($iromidHeight);
-            transform:translate(-50%, -50%) translateY(px2rem(-$headHeight/2-$iromidWidth/2)) rotateX(90deg);
             left:50%;
             top:50%;
+        }        
+
+        .iro-mid {
+            transform:translate(-50%, -50%) translateY(px2rem(-$headHeight/2)) rotateX(90deg);
         }
 
-        .iro-mid__side {
+        .iro-left {
+            transform:translate(-50%, -50%) translateX(px2rem(-$headWidth/2)) translateY(px2rem(-$headHeight/4)) rotateX(90deg);
+        }
+
+        .iro-right {
+            transform:translate(-50%, -50%) translateX(px2rem($headWidth/2)) translateY(px2rem(-$headHeight/4)) rotateX(90deg);
+        }
+
+
+        .iro__side {
             position: absolute;
             transform-style: preserve-3d;
             background:$iromidColor;
         } 
         
-        .iro-mid__side-top {
+        .iro__side-top {
             width:100%;
             height:100%;
             transform:translateZ(px2rem($iromidWidth/2));        
         }
 
-        .iro-mid__side-back {
+        .iro__side-bottom {
+            width:100%;
+            height:100%;
+            transform:translateZ(px2rem(-$iromidWidth/2));    
+        }
+
+        .iro__side-back {
             width:px2rem($iromidWidth);
             height:px2rem($iromidWidth);
             top:px2rem(-$iromidWidth/2);
             transform:rotateX(-90deg);
         }
 
-        .iro-mid__side-front {
+        .iro__side-front {
             width:px2rem($iromidWidth);
             height:px2rem($iromidWidth);
             bottom:px2rem(-$iromidWidth/2);
             transform:rotateX(90deg);
         }
-
-        .iro-mid__side-bottom {
-            width:100%;
-            height:px2rem($iromidHeight);
-            top:px2rem(-$iromidHeight/2);
-            transform:rotateX(-90deg);        
-        }
         
-        .iro-mid__side-left {
+        .iro__side-left {
             width:px2rem($iromidWidth);
             height:px2rem($iromidHeight);
             left:px2rem(-$iromidWidth/2);
             transform:rotateY(-90deg);
         }
 
-        .iro-mid__side-right {
+        .iro__side-right {
             width:px2rem($iromidWidth);
             height:px2rem($iromidHeight);
             right:px2rem(-$iromidWidth/2);
             transform:rotateY(90deg);
         }
 
+        // jaws
+
+        .jaws {
+            transform:translate(-50%, -50%) translateY(px2rem($headHeight/2 - $jawsHeight/2 + ($jawsWidth - $headWidth) / 2)) rotateX(90deg);
+            position: absolute;
+            transform-style: preserve-3d;
+            width:px2rem($jawsWidth);
+            height:px2rem($jawsHeight);
+            left:50%;
+            top:50%;
+        }
+
+        .jaws__side {
+            position: absolute;
+            transform-style: preserve-3d;
+            background:$jawsColor;
+        } 
+        
+        .jaws__side-back {
+            width:px2rem($jawsWidth);
+            height:px2rem($jawsHeight);
+            top:px2rem(-$jawsWidth/2);
+            transform:rotateX(-90deg);
+        }
+
+        .jaws__side-front {
+            width:px2rem($jawsWidth);
+            height:px2rem($jawsHeight);
+            bottom:px2rem(-$jawsWidth/2);
+            transform:rotateX(90deg);
+        }
+
+        .jaws__side-top {
+            width:px2rem($jawsWidth);
+            height:px2rem($jawsWidth);
+            top:0;
+            bottom:0;
+            margin:auto;
+            transform:translateZ(px2rem($jawsHeight/2));            
+        }
+
+        .jaws__side-bottom {
+            width:px2rem($jawsWidth);
+            height:px2rem($jawsWidth);
+            top:0;
+            bottom:0;
+            margin:auto;
+            transform:translateZ(px2rem(-$jawsHeight/2));        
+        }
+        
+        .jaws__side-left {
+            width:px2rem($jawsWidth);
+            height:px2rem($jawsHeight);
+            left:px2rem(-$jawsWidth/2);
+            transform:rotateX(90deg) rotateY(-90deg);
+        }
+
+        .jaws__side-right {
+            width:px2rem($jawsWidth);
+            height:px2rem($jawsHeight);
+            right:px2rem(-$jawsWidth/2);
+            transform:rotateX(90deg) rotateY(90deg);
+        }
 
         // 0000000000000000000000000000000000000000000000000000000000000000000000000
         .hairlayer-0 {
@@ -484,9 +565,7 @@ body {
         //_______________________________________________________________________________________
 
         .head__side {
-           // background-color: $headColor;
-           background-image: radial-gradient(black, black);
-            // border:1px solid white;
+           background: $headSideColor;
         }
 
         .head__side-top {
@@ -540,8 +619,8 @@ body {
             transform-style: preserve-3d;
             width: px2rem(40);
             height: px2rem(40);
-            background-color: grey;
-            border-radius: 50%;
+            background-color: $eyecolor;
+            // border-radius: 50%;
         }
 
         .eye-inner {
@@ -549,7 +628,7 @@ body {
             width:50%;
             height:50%;
             background-color: $eyeInnerColor;
-            border-radius: 50%;
+            // border-radius: 50%;
             top:0;
             bottom:0;
             left:0;
@@ -610,8 +689,7 @@ body {
         .eyebrow__seqment__side-front {
             width:100%;
             height:px2rem($eyebrowSize);
-            bottom:px2rem(-$eyebrowSize/2);
-            transform:rotateX(90deg);
+            transform:translateY(px2rem($eyebrowSize / 2)) rotateX(90deg);
         }
 
         .eyebrow__seqment__side-back {
